# Projet_IA_Dauphine

./: .gitignore  README.md
classifier_Jira/: CodeClassifier-Copy1.ipynb  CodeClassifierMAJ.ipynb  Query.sql
rag_jira/: README.md  pyproject.toml
rag_jira/doc/: schema_rag.excalidraw
rag_jira/src/: analyse.ipynb  app.py  script_de_test.py
rag_jira/src/entrepot/: embeddings.py  jira_issues.py  llm_models.py  redis_schema.yaml
rag_jira/src/service/: indexation.py
rag_jira/xp/: analyse.ipynb  script_de_test.py
